<resources>
    <string name="app_name">ModbusApp</string>
    <string name="refreshing">Refreshing...</string>
    <string name="add_name">设置名称</string>
    <string name="add_address">设置地址</string>
    <string name="please_input_name">请输入名称</string>
    <string name="please_input_address">请输入地址</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="choose_type">选择类型</string>
    <string name="click_to_choose">请点击选择</string>
    <string name="ok">确定</string>
    <string name="manage">管理</string>
    <string name="param_coil">线圈参数</string>
    <string name="param_register">寄存器参数</string>
    <string name="add_config">添加配置文件</string>
    <string name="edit_config">编辑配置文件</string>
    <string name="config_list">配置列表</string>
    <string name="data_list">数据汇总</string>
    <string name="name_is_null">名称为空</string>
    <string name="address_is_null">地址为空</string>
    <string name="please_choose_type">请选择类型</string>
    <string name="delete_or_not">是否删除%1$s?</string>
    <string name="save">保存</string>
    <string name="save_or_not">是否保存?</string>
    <string name="config">配置</string>
    <string name="enabled">使能</string>
    <string name="disabled">不使能</string>
    <string name="downing">正在下载</string>
    <string name="app_version">APP版本</string>
</resources>
