<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/NormalPadding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CCPFontPreferenceSmall"
            android:text="@string/choose_type"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider"/>
    </LinearLayout>
  <com.siterwell.seriallibrary.usbserial.view.SpinnerSelectView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:Spinner_item="@array/choose_type"
      app:Spinner_DropDownTitle="@string/choose_type"/>

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/NormalPadding">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/CCPFontPreferenceSmall"
         android:text="@string/add_name"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/list_divider"/>
 </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:textColor="@color/black"
    android:padding="@dimen/NormalPadding"
    android:inputType="text"
    android:hint="@string/please_input_name"
    android:id="@+id/tet"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/NormalPadding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CCPFontPreferenceSmall"
            android:text="@string/add_address"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/list_divider"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@color/black"
        android:padding="@dimen/NormalPadding"
        android:digits="123456789"
        android:inputType="number"
        android:hint="@string/please_input_address"
        android:id="@+id/tet2"/>
</LinearLayout>